--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app_template",
+  "name": "notmiro",
   "version": "1.0.0",
   "license": "AGPL-3.0-or-later",
   "engines": {
@@ -18,7 +18,18 @@
     "extends @nextcloud/browserslist-config"
   ],
   "dependencies": {
+    "@nextcloud/axios": "^2.4.0",
+    "@nextcloud/dialogs": "^4.2.4",
+    "@nextcloud/files": "^3.1.0",
+    "@nextcloud/l10n": "^2.2.0",
+    "@nextcloud/router": "^2.2.0",
     "@nextcloud/vue": "^8.26.1",
+    "reactflow": "^11.10.1",
+    "quill": "^1.3.7",
+    "y-quill": "^0.1.5",
+    "y-webrtc": "^10.2.5",
+    "y-websocket": "^1.5.0",
+    "yjs": "^13.6.8",
     "vue": "^2.7.16"
   },
   "devDependencies": {
